# whitesynth

./: .gitignore  .prettierignore  Cargo.toml  README.md  rustfmt.toml
docs/: controlChanges.md  insertionEffects.md  midiImplementation.md  multiEffects.md  sysexCommands.md  sysexManufacturerId.md  sysexParametersList.md  systemEffects.md  whitesynthSysexCommandsList.md
examples/: amp-sim-test.rs  envelope-test.rs  smoother-test.rs
src/: consts.rs  lib.rs  main.rs
src/audio_drivers/: alsa.rs  audio_file.rs  mod.rs  pipe.rs
src/audio_drivers/alsa/: mod.rs
src/soundbank/: mod.rs  sf2.rs
src/soundbank/sf2/: gen_ids.rs  mod.rs  structure.rs  to_wsbk.rs
src/soundbank/wsbk/: articulators.rs  consts.rs  fourcc.rs  mod.rs
src/synth/: articulator.rs  envelope.rs  lfo.rs  mod.rs  oscillator.rs  param_smoother.rs  settings.rs  vendors.rs  voice.rs
src/synth/effects/: compressor.rs  delay.rs  distortion.rs  drive.rs  envelope.rs  filter.rs  lfo.rs  mod.rs  pitch_bend.rs  reverb.rs  ring_buffer.rs  vibrato.rs
src/synth/effects/amp_simulator/: mod.rs  wave_shaper.rs
src/tests/: mod.rs
src/util/: interpolation.rs  mod.rs  synth.rs
src/util/midi/: cc_ids.rs  cc_ids_i.rs  mod.rs
