[package]
name = "whitesynth"
version = "0.0.0"
edition = "2021"
repository = "https://github.com/kmoon2437/whitesynth"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#jack = "0.11.3"
#num-traits = "0.2.17"
log = "0.4.17"
log4rs = "1.2.0"
chrono = "0.4.23"
riff = "2.0.0"
alsa = "0.8.1"
threadpool = "1.8.1"
